# SpecOrca

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REBRAND.md  SECURITY.md  noxfile.py  package.json  pyproject.toml
.github/workflows/: ci.yml
src/spec_orca/: __init__.py  __main__.py  _deprecated_cli.py  agent.py  architect.py  backend.py  backends.py  cli.py  git_ops.py  init.py  interview.py  loader.py  models.py  orchestrator.py  protocols.py  report.py  spec.py  state.py  stubs.py
src/spec_orca/backends/: __init__.py  claude.py  claude_schema.py  codex.py  codex_schema.py  mock.py
src/spec_orca/dev/: git.py
src/spec_orchestrator/: __init__.py  backends.py  cli.py  loader.py  models.py  orchestrator.py  protocols.py  stubs.py
src/spec_orchestrator/dev/: __init__.py  git.py
tests/: test_backends.py  test_cli.py  test_codex_backend.py  test_deprecated_aliases.py  test_dev_git.py  test_e2e.py  test_git_ops.py  test_init.py  test_interview.py  test_loader.py  test_models.py  test_orchestrator.py  test_protocols.py  test_report.py  test_roles.py  test_spec.py  test_state.py  test_stubs.py
tests/fixtures/specs/: invalid_bad_fields.yaml  invalid_missing_specs.yaml  invalid_yaml.yaml  valid.yaml
