[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spec-orca"
version = "0.1.0"
description = "SpecOrca — a spec-driven two-role orchestrator (Architect / Agent) with swappable coding backends."
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "PyYAML>=6.0",
]
authors = [
    { name = "SpecOrca contributors" },
]
readme = "README.md"
keywords = ["orchestrator", "architect", "agent", "cli", "specorca"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/dudujuju828/SpecOrca"
Repository = "https://github.com/dudujuju828/SpecOrca"
Changelog = "https://github.com/dudujuju828/SpecOrca/blob/master/CHANGELOG.md"
Issues = "https://github.com/dudujuju828/SpecOrca/issues"

[project.scripts]
spec-orca = "spec_orca.cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "coverage[toml]>=7.4",
    "types-PyYAML>=6.0",
    "pre-commit>=4.0",
    "nox>=2024.4",
    "build>=1.0",
    "twine>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
src = ["src"]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E", "W", # pycodestyle
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["spec_orca"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
packages = ["spec_orca"]
mypy_path = ["src"]

# ---------------------------------------------------------------------------
# Pytest / Coverage
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--cov=spec_orca",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]

[tool.coverage.run]
source = ["spec_orca"]

[tool.coverage.report]
show_missing = true
fail_under = 80
